{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 27,
  "lineage": "6e017c1b-f2b7-f168-07f6-a948e766de3a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-08T15:39:42.427-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/monprojetd/global/firewalls/http",
            "log_config": [],
            "name": "http",
            "network": "https://www.googleapis.com/compute/v1/projects/monprojetd/global/networks/devoir1",
            "priority": 1000,
            "project": "monprojetd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monprojetd/global/firewalls/http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2846",
                  "5462"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-08T15:39:42.420-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/monprojetd/global/firewalls/ssh",
            "log_config": [],
            "name": "ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/monprojetd/global/networks/devoir1",
            "priority": 1000,
            "project": "monprojetd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monprojetd/global/firewalls/ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "canard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200910",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/monprojetd/zones/us-central1-a/disks/canard"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/monprojetd/zones/us-central1-a/instances/canard",
            "instance_id": "8562028387769658281",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "ko4c3j15L-4=",
            "metadata_startup_script": "apt-get -y update \u0026\u0026 apt-get -y upgrade \u0026\u0026 apt-get -y install apache2 \u0026\u0026 systemctl start apache2",
            "name": "canard",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.245.42",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/monprojetd/global/networks/devoir1",
                "network_ip": "172.16.3.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/monprojetd/regions/us-central1/subnetworks/prod-dmz",
                "subnetwork_project": "monprojetd"
              }
            ],
            "project": "monprojetd",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/monprojetd/zones/us-central1-a/instances/canard",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.devoir1",
            "google_compute_subnetwork.prod-dmz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "cheval",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fedora-coreos-cloud/global/images/fedora-coreos-32-20200923-3-0-gcp-x86-64",
                    "size": 8,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/monprojetd/zones/us-central1-a/disks/cheval"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/monprojetd/zones/us-central1-a/instances/cheval",
            "instance_id": "4989208234265043485",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "1mwoz6tc_bo=",
            "metadata_startup_script": "apt-get -y update \u0026\u0026 apt-get -y upgrade",
            "name": "cheval",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.72.73.44",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/monprojetd/global/networks/devoir1",
                "network_ip": "10.0.2.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/monprojetd/regions/us-central1/subnetworks/prod-traitement",
                "subnetwork_project": "monprojetd"
              }
            ],
            "project": "monprojetd",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/monprojetd/zones/us-central1-a/instances/cheval",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_subnetwork.prod-traitement"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mouton",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fedora-coreos-cloud/global/images/fedora-coreos-32-20200923-3-0-gcp-x86-64",
                    "size": 8,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/monprojetd/zones/us-central1-a/disks/mouton"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/monprojetd/zones/us-central1-a/instances/mouton",
            "instance_id": "7666409092441858589",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "nXJ9pUF1gvY=",
            "name": "mouton",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.238.198.245",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/monprojetd/global/networks/devoir1",
                "network_ip": "10.0.3.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/monprojetd/regions/us-central1/subnetworks/prod-interne",
                "subnetwork_project": "monprojetd"
              }
            ],
            "project": "monprojetd",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/monprojetd/zones/us-central1-a/instances/mouton",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_subnetwork.prod-interne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "devoir1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/monprojetd/global/networks/devoir1",
            "name": "devoir1",
            "project": "monprojetd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monprojetd/global/networks/devoir1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-08T15:39:43.721-07:00",
            "gateway_address": "172.16.3.1",
            "id": "projects/monprojetd/regions/us-central1/subnetworks/prod-dmz",
            "ip_cidr_range": "172.16.3.0/24",
            "name": "prod-dmz",
            "network": "https://www.googleapis.com/compute/v1/projects/monprojetd/global/networks/devoir1",
            "private_ip_google_access": false,
            "project": "monprojetd",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monprojetd/regions/us-central1/subnetworks/prod-dmz"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-interne",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-08T15:39:43.110-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/monprojetd/regions/us-central1/subnetworks/prod-interne",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "prod-interne",
            "network": "https://www.googleapis.com/compute/v1/projects/monprojetd/global/networks/devoir1",
            "private_ip_google_access": false,
            "project": "monprojetd",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monprojetd/regions/us-central1/subnetworks/prod-interne"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "prod-traitement",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-08T15:39:42.850-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/monprojetd/regions/us-central1/subnetworks/prod-traitement",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "prod-traitement",
            "network": "https://www.googleapis.com/compute/v1/projects/monprojetd/global/networks/devoir1",
            "private_ip_google_access": false,
            "project": "monprojetd",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/monprojetd/regions/us-central1/subnetworks/prod-traitement"
          },
          "dependencies": [
            "google_compute_network.devoir1"
          ]
        }
      ]
    }
  ]
}